# forked

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN_OVERHAUL_PLAN.md  README.md  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.claude/: settings.json
.github/workflows/: build-release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  watcher.rs
src-tauri/src/commands/: branch.rs  commit.rs  config.rs  diff.rs  mod.rs  remote.rs  repo.rs  stash.rs
src-tauri/src/git/: credentials.rs  diff.rs  history.rs  index.rs  merge.rs  mod.rs  repository.rs
src/components/branch/: BranchItem.tsx  BranchList.tsx  BranchOption.tsx  BranchSection.tsx  BranchTrackingIndicators.tsx  CreateBranchDialog.tsx
src/components/common/: Button.tsx  ConfirmDialog.tsx  ContextMenu.tsx  Dialog.tsx  Input.tsx
src/components/diff/: DiffLineComponent.tsx  DiffViewToggle.tsx  DiffViewer.tsx  HunkView.tsx  SplitDiffViewer.tsx  SplitHunkView.tsx  SplitLineCell.tsx  SplitRow.tsx
src/components/history/: CommitDetails.tsx  CommitDetailsFileItem.tsx  CommitGraph.tsx
src/components/layout/: CommitItem.tsx  DetailsPanel.tsx  Header.tsx  MainPanel.tsx  Sidebar.tsx  SidebarCommitBox.tsx  SidebarFileItem.tsx  (+1 more)
src/hooks/: useBranches.ts  useCommits.ts  useDiff.ts  useRepository.ts
src/lib/: splitDiff.ts  tauri.ts  types.ts  utils.ts
src/stores/: repoStore.ts  settingsStore.ts  storeHelpers.ts  uiStore.ts
src/styles/: globals.css
(+14 files in other folders)
