[package]
name = "forked"
version = "0.1.0"
description = "Forked — a multiplatform desktop Git client"
authors = ["you"]
edition = "2021"

[lib]
name = "forked_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
git2 = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros"] }
parking_lot = "0.12"
notify = "7"
notify-debouncer-mini = "0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
